# vector-search-from-scratch

./: README.md  benchmark.py  benchmark_queries.py  main.py  pyproject.toml
embeddings/: embeddings_from_scratch.py
index/: index_from_scratch.py  index_hnsw.py  index_hnsw_from_scratch.py
test/: test_index_from_scratch.py
vector_search/: chunking.py  pdf_loader.py
vector_search/chunking/: chunking_from_scratch.py
vector_search/embeddings/: embeddings.py
vector_search/index/: index.py  index_from_scratch.py  index_hnsw.py  index_hnsw_from_scratch.py  ivf_from_scratch.py  ivf_pq.py  pq.py
